# gsqz

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.yaml
.github/workflows/: ci.yml  release.yml
docs/: user-guide.md
src/: compressor.rs  config.rs  daemon.rs  main.rs
src/primitives/: dedup.rs  filter.rs  group.rs  truncate.rs
